# umsi-si639-labs

./: .gitignore  DEV.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
labs/: README.md
labs/ait_apis/: README.md  clients.py  collection_app.py
labs/ait_apis/templates/: base.html  collection.html  crawl.html  index.html
labs/archive_it/: README.md
labs/archive_it_apis/: README.md  clients.py
labs/bag_nabit/: README.md
labs/browser_dev_tools/: README.md
labs/browser_save_as/: README.md
labs/browsertrix/: README.md
labs/heritrix/: README.md  kevin-bacon-job.xml
labs/pywb/: README.md
labs/warcprox/: README.md
labs/wget/: README.md
serve/: _config.yml  docker-compose.yml
